--- a/employee_access.html
+++ b/employee_access.html
@@ -159,7 +159,7 @@
               <div class="box" style="background: linear-gradient(135deg, #eff6ff 0%, #dbeafe 100%); border: 2px solid #3b82f6; animation: pulse 2s infinite;">
                 <label class="object-label">
                   <input type="checkbox" id="apt_constructive">
-                  <span class="object-name" style="color: #1e40af; font-weight: 700; font-size: 16px;">🏗️ КОНСТРУКТИВНЫЕ ЭЛЕМЕНТЫ (НОВЫЙ ОБЪЕКТ!)</span>
+                  <span class="object-name" style="color: #1e40af; font-weight: 700; font-size: 16px;">🏗️ Конструктивные элементы</span>
                 </label>
                 <div class="input-field" style="margin-left:24px; margin-top: 10px;">
                   <label for="apt_sum_constructive" class="input-label-small" style="font-weight: 600;">Страховая сумма (₽):</label>
@@ -232,7 +232,12 @@
     import { EXPRESS_PACKS } from './tariffs.express.js';
     import { EXPRESS_GO_PACKS } from './tariffs.express_go.js';
     import * as Platinum from './tariffs.platinum.express.js';
+import * as MoyaMod from './tariffs.moyakvartira.js';
+import * as BastionMod from './tariffs.bastion.js';
+
 const PRODUCT5_TARIFFS = Platinum.PRODUCT5_TARIFFS || Platinum.TARIFFS || Platinum.default || [];
+const T_MOYA = MoyaMod.T_MOYA || MoyaMod.TARIFFS || MoyaMod.default || [];
+const T_BASTION = BastionMod.T_BASTION || BastionMod.TARIFFS || BastionMod.default || {};
 
     // Глобальные переменные
     let currentPropertyType = 'house';
@@ -241,6 +246,26 @@ const PRODUCT5_TARIFFS = Platinum.PRODUCT5_TARIFFS || Platinum.TARIFFS || Platin
     const fmt = n => new Intl.NumberFormat('ru-RU').format(Math.round(n));
 
     function findRate(ranges, sum) {
+    for (const r of ranges) {
+      if (sum >= r.min && sum <= r.max) return r.rate;
+    }
+    if (ranges.length) return ranges[ranges.length - 1].rate;
+    return 0;
+}
+
+// helper to read possible numeric fields from a pack
+function getPackValue(pack, ...keys){
+  for(const k of keys){
+    if(pack && pack[k] !== undefined && !isNaN(Number(pack[k]))) return Number(pack[k]);
+  }
+  // try looking for any numeric property
+  for(const prop in pack){
+    if(!isNaN(Number(pack[prop]))) return Number(pack[prop]);
+  }
+  return 0;
+}
+
+
       for (const r of ranges) {
         if (sum >= r.min && sum <= r.max) return r.rate;
       }
@@ -271,7 +296,7 @@ const PRODUCT5_TARIFFS = Platinum.PRODUCT5_TARIFFS || Platinum.TARIFFS || Platin
         const details = [];
 
         // Материал стен (по умолчанию дерево)
-        const mat = 'wood';
+        const mat = (document.querySelector('input[name="house_material"]:checked')||{value:'wood'}).value;
 
         // Отделка
         if (finishChecked && finishSum > 0) {
@@ -348,16 +373,19 @@ const PRODUCT5_TARIFFS = Platinum.PRODUCT5_TARIFFS || Platinum.TARIFFS || Platin
 
       if (constructiveChecked) {
         // Если выбран конструктив - доступны: Моя квартира, Экспресс квартира, Платинум экспресс, Бастион
-        availableProducts.push('my_apartment', 'express_apartment', 'platinum_express', 'bastion');
+        availableProducts.push('my_apartment', 'express_apartment', 'platinum_express');
+        if (document.getElementById('apartment_drone_coverage')?.checked) availableProducts.push('bastion');
       } else if (liabChecked && !finishChecked && !movableChecked) {
         // Только ГО - доступен Экспресс ГО
         availableProducts.push('express_go');
       } else if ((finishChecked || movableChecked) && liabChecked) {
         // Отделка/движимое + ГО - доступны все продукты
-        availableProducts.push('my_apartment', 'express_apartment', 'express_go', 'platinum_express', 'bastion');
+        availableProducts.push('my_apartment', 'express_apartment', 'express_go', 'platinum_express');
+        if (document.getElementById('apartment_drone_coverage')?.checked) availableProducts.push('bastion');
       } else if (finishChecked || movableChecked) {
         // Только имущество - доступны Моя квартира, Экспресс квартира, Платинум
-        availableProducts.push('my_apartment', 'express_apartment', 'platinum_express', 'bastion');
+        availableProducts.push('my_apartment', 'express_apartment', 'platinum_express');
+        if (document.getElementById('apartment_drone_coverage')?.checked) availableProducts.push('bastion');
       }
 
       // Расчет для каждого доступного продукта
@@ -440,21 +468,26 @@ const PRODUCT5_TARIFFS = Platinum.PRODUCT5_TARIFFS || Platinum.TARIFFS || Platin
       let bestDiff = Infinity;
 
       PRODUCT5_TARIFFS.forEach(pack => {
+        const pack_ke = getPackValue(pack, 'ke','KE','k_e','konstructive','ke_sum');
+        const pack_oo = getPackValue(pack, 'oo','OO','oo_sum','finish','oo_value');
+        const pack_di = getPackValue(pack, 'di','DI','di_sum','movable','di_value');
+        const pack_go = getPackValue(pack, 'go','GO','go_sum','liab','go_value');
+
         let totalDiff = 0;
-        if (constructiveChecked) totalDiff += Math.abs(pack.ke - constructiveSum);
-        if (finishChecked) totalDiff += Math.abs(pack.oo - finishSum);
-        if (movableChecked) totalDiff += Math.abs(pack.di - movableSum);
-        if (liabChecked) totalDiff += Math.abs(pack.go - liabSum);
+        if (constructiveChecked) totalDiff += Math.abs(pack_ke - constructiveSum);
+        if (finishChecked) totalDiff += Math.abs(pack_oo - finishSum);
+        if (movableChecked) totalDiff += Math.abs(pack_di - movableSum);
+        if (liabChecked) totalDiff += Math.abs(pack_go - liabSum);
 
         if (totalDiff < bestDiff) {
           bestDiff = totalDiff;
-          bestPack = pack;
+          bestPack = {orig: pack, ke: pack_ke, oo: pack_oo, di: pack_di, go: pack_go};
         }
       });
 
       if (!bestPack) return null;
 
-      const price = bestPack.special || bestPack.standard;
+      const price = getPackValue(bestPack.orig, 'special', 'special_price', 'sp') || getPackValue(bestPack.orig, 'standard', 'price', 'premium', 'standard_price');
 
       const details = [];
       if (constructiveChecked && bestPack.ke > 0) details.push(`Конструктивные элементы: ${fmt(bestPack.ke)} ₽`);
@@ -462,11 +495,8 @@ const PRODUCT5_TARIFFS = Platinum.PRODUCT5_TARIFFS || Platinum.TARIFFS || Platin
       if (movableChecked && bestPack.di > 0) details.push(`Движимое имущество: ${fmt(bestPack.di)} ₽`);
       if (liabChecked && bestPack.go > 0) details.push(`Гражданская ответственность: ${fmt(bestPack.go)} ₽`);
 
-      if (bestPack.special) {
-        details.push(`Стандартная премия: ${fmt(bestPack.standard)} ₽`);
-        details.push(`Специальная премия: ${fmt(bestPack.special)} ₽`);
-      } else {
-        details.push(`Премия: ${fmt(bestPack.standard)} ₽`);
+      if (getPackValue(bestPack.orig,'special','special_price','sp')) {
+        details.push('Условия специального предложения: Безусловная франшиза по имущественным рискам (без ГО) — 10 000 руб. при выплате.');
       }
 
       return {
@@ -474,8 +504,6 @@ const PRODUCT5_TARIFFS = Platinum.PRODUCT5_TARIFFS || Platinum.TARIFFS || Platin
         total: price,
         details: details
       };
-    }
-
     function calculateMyApartment(constructiveSum, finishSum, movableSum, liabSum, constructiveChecked, finishChecked, movableChecked, liabChecked) {
       // Моя квартира поддерживает все объекты включая конструктив
       let total = 0;
@@ -591,11 +619,13 @@ const PRODUCT5_TARIFFS = Platinum.PRODUCT5_TARIFFS || Platinum.TARIFFS || Platin
       const apartmentRadio = document.getElementById('property_apartment');
 
       if (houseRadio.checked) {
+        document.getElementById('material_block').style.display = 'block';
         currentPropertyType = 'house';
         document.getElementById('house_section').style.display = 'block';
         document.getElementById('apartment_section').style.display = 'none';
         displayHouseResults();
       } else if (apartmentRadio.checked) {
+        document.getElementById('material_block').style.display = 'none';
         currentPropertyType = 'apartment';
         document.getElementById('house_section').style.display = 'none';
         document.getElementById('apartment_section').style.display = 'block';
@@ -636,6 +666,17 @@ const PRODUCT5_TARIFFS = Platinum.PRODUCT5_TARIFFS || Platinum.TARIFFS || Platin
 
         // Добавить стоимость БПЛА если выбрана опция
         if (droneChecked && result.product === 'Дом без забот') {
+          // add Bastion as separate product when drone selected
+          const bastionCalc = calculateBastion(0, Number(document.getElementById('house_sum_finish')?.value)||0, 0, false, true, false);
+          if(bastionCalc){
+            html += `
+  <div class="product-result" style="margin-bottom: 20px; padding: 16px; border: 1px solid #e5e7eb; border-radius: 8px;">
+    <div class="h3" style="color: var(--accent); margin-bottom: 12px;">${bastionCalc.product}</div>
+    <div class="total" style="margin-bottom: 12px;">Итого: ${fmt(bastionCalc.total)} ₽</div>
+    <div class="details">${bastionCalc.details.map(detail=>`<div class="small-block">${detail}</div>`).join('')}</div>
+  </div>`;
+          }
+
           const dronePremium = calculateDronePremium(result.details);
           total += dronePremium;
           result.details.push(`БПЛА (Бастион): ${fmt(dronePremium)} ₽`);
