--- a/employee_access.html
+++ b/employee_access.html
@@ -3,22 +3,43 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Employee Access — Calculators</title>
+  <title>Сотрудник СК Добро пожаловать.</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
   <style>
-body{font-family:Arial,Helvetica,sans-serif;background:#f6f7fb;padding:20px}
-.container{max-width:1000px;margin:0 auto}
-.card{background:#fff;padding:12px;border-radius:8px;margin-bottom:12px}
-label{display:block;margin:6px 0}
-.results .product{border-bottom:1px solid #eee;padding:8px 0}
-.total{font-weight:bold}
-.small{color:#555;font-size:13px}
-</style>
+    @keyframes pulse {
+      0%, 100% { opacity: 1; }
+      50% { opacity: 0.7; }
+    }
+  </style>
 </head>
 <body>
-<div class="container">
-  <h1>Employee access — расчёт</h1>
+  <!-- Геройская секция -->
+  <header class="hero-section">
+    <div class="hero-overlay"></div>
+    <div class="hero-content">
+      <div class="hero-logo">
+        <div class="logo-icon">🏛️</div>
+        <h1 class="hero-title">ИНГОССТРАХ</h1>
+        <div class="hero-subtitle">Сравнение продуктов ИФЛ</div>
+      </div>
+    </div>
+    <div class="hero-decoration">
+      <div class="decoration-element"></div>
+      <div class="decoration-element"></div>
+      <div class="decoration-element"></div>
+    </div>
+  </header>
+
+  <!-- Основной контент -->
+  <main class="main-content">
+    <div class="container">
+      <a href="index.html" class="back-button">
+        <span>←</span> <span>Назад к выбору продуктов</span>
+      </a>
+      <div class="header"><h1 style="margin:0">Мультивариативный продукт СК</h1></div>
   <div class="card">
-    <strong>Пароль доступа:</strong> (скрыто в продакшн) — тестовый доступ
+    <strong>выбери и получи результат</strong>
   </div>
 
   <div class="card">
@@ -58,10 +79,11 @@ label{display:block;margin:6px 0}
   <div class="card results">
     <h3>Результаты</h3>
     <div id="results"></div>
-  </div>
-</div>
+      </div>
+    </div>
+  </main>
 
-<script type="module">
+  <script type="module">
 /*
   Robust loader for tariff modules. Attempts dynamic import; if named export missing,
   fetches file and extracts const literal for the requested name.
@@ -217,11 +239,22 @@ function calcExpress(sums){
     matched = EXPRESS_PACKS.slice().reverse().find(p => sums.finish >= p.finish) || EXPRESS_PACKS[0];
   }
   if(!matched) return null;
-  const price = (document.getElementById('insure_drone').checked ? matched.withGo : matched.noGo);
-  // for display break down heuristically
-  return {parts:[
-    {name:'Пакет Экспресс', sum: matched.finish, rate: null, prem: price}
-  ], total: price, productName:'Экспресс квартира'};
+  const withGo = document.getElementById('insure_drone').checked;
+  const price = withGo ? matched.withGo : matched.noGo;
+
+  // Показываем детализацию пакета
+  const parts = [];
+  parts.push({name:'Отделка и инженерное оборудование', sum: matched.finish, rate: null, prem: null});
+  if (matched.movable && matched.movable > 0) {
+    parts.push({name:'Движимое имущество', sum: matched.movable, rate: null, prem: null});
+  } else {
+    parts.push({name:'Движимое имущество', sum: 0, rate: null, prem: null});
+  }
+  if (withGo) {
+    parts.push({name:'Гражданская ответственность', sum: 50000, rate: null, prem: null});
+  }
+
+  return {parts: parts, total: price, productName:'Экспресс квартира'};
 }
 
 function calcPlatinum(sums){
@@ -238,10 +271,25 @@ function calcPlatinum(sums){
     // fallback choose nearest by oo
     matched = PRODUCT5_TARIFFS.slice().reverse().find(p => sums.finish >= (p.oo||0)) || PRODUCT5_TARIFFS[0];
   }
-  const price = document.getElementById('insure_drone').checked ? (matched.special || matched.standard) : matched.standard;
-  return {parts:[
-    {name:'Платинум пакет', sum: null, rate:null, prem: price}
-  ], total: price, productName:'Платинум Экспресс Квартира'};
+  const withDrone = document.getElementById('insure_drone').checked;
+  const price = withDrone ? (matched.special || matched.standard) : matched.standard;
+
+  // Показываем детализацию пакета
+  const parts = [];
+  if (matched.ke && matched.ke > 0) {
+    parts.push({name:'Конструктивные элементы', sum: matched.ke, rate: null, prem: null});
+  }
+  if (matched.oo && matched.oo > 0) {
+    parts.push({name:'Отделка и инженерное оборудование', sum: matched.oo, rate: null, prem: null});
+  }
+  if (matched.di && matched.di > 0) {
+    parts.push({name:'Движимое имущество', sum: matched.di, rate: null, prem: null});
+  }
+  if (matched.go && matched.go > 0) {
+    parts.push({name:'Гражданская ответственность', sum: matched.go, rate: null, prem: null});
+  }
+
+  return {parts: parts, total: price, productName:'Платинум Экспресс Квартира'};
 }
 
 function calcBastionFlat(sums){
@@ -270,7 +318,13 @@ function renderResultBlock(name, calc){
   const ul = document.createElement('div');
   calc.parts.forEach(p=>{
     const line = document.createElement('div');
-    line.textContent = p.name + ': ' + (p.prem? p.prem.toFixed(2)+' ₽' : (p.rate? (p.rate*100).toFixed(3)+'%':'—') );
+    if (p.prem !== null) {
+      // Для продуктов с расчетом по частям (Моя квартира, Бастион)
+      line.textContent = p.name + ': ' + (p.prem ? p.prem.toFixed(2)+' ₽' : (p.rate ? (p.rate*100).toFixed(3)+'%' : '—'));
+    } else {
+      // Для пакетных продуктов (Экспресс, Платинум) - показываем страховые суммы
+      line.textContent = p.name + ': ' + (p.sum ? p.sum.toLocaleString('ru-RU') + ' ₽' : 'не включено');
+    }
     ul.appendChild(line);
   });
   const tot = document.createElement('div'); tot.className='total'; tot.textContent='Итого: '+(calc.total?calc.total.toFixed(2)+' ₽':'0 ₽');
